metacatui/src/main/webapp/js/themes/dataone/css/metacatui.css
/* ... */
	.navbar .nav > li > a {
        color: #FFF;
		text-shadow: none;
		font-size: 1.2em;
		font-weight: normal;
    }
    .navbar .nav > li > a:hover,
    .navbar .nav > li > a:focus{
    	color: rgb(0,255,255);
    }
    .navbar .nav li.dropdown.open>.dropdown-toggle, .navbar .nav li.dropdown.active>.dropdown-toggle, .navbar .nav li.dropdown.open.active>.dropdown-toggle{
    	background-color: #440029;
    	color: #FFF;
    }
    .navbar-inner > ul > li img{
		max-height: 22px;
	}
	.navbar-lower{
		width: 100%;
		width: calc(100% - 40px);
		min-height: 40px;
		background-color: rgba(63, 0, 31, 1);
		padding-left: 20px;
		padding-right: 20px;
	}
	.navbar-lower .nav > li > a {
		font-size: 1em;
		font-weight: light;
	}
	.navbar .nav > .label{
		font-size: .8em;
		color: #FFF;
		font-weight: light;
		text-transform: uppercase;
		line-height: 40px;
		margin-left: 14px;
		margin-right: 14px;
	}
    .navbar-upper{
    	padding-left: 20px;
    	padding-right: 20px;
    }
    .nav li.right{
    	float: right;
    }
    .nav .logo > img{
    	height: 36px;
    }
    
    /*Share Your Data button */
    #share-data-view{
    	display: none;
    }
    
    #share{
    	position: fixed;
    	top: 60px;
    	left: -160px;
    	z-index: 999;
    	width: auto;
    	margin: 0px;
    	border-radius: 0px;
    	-webkit-border-radius: 0px;
    	-moz-border-radius: 0px;
    	padding: 0px 5px;
    	line-height: 33px;
    	-webkit-box-shadow: 3px -1px 15px rgba(50, 50, 50, 0.51);
		-moz-box-shadow:    3px -1px 15px rgba(50, 50, 50, 0.51);
		box-shadow:         3px -1px 15px rgba(50, 50, 50, 0.51);
		transition: all .5s;
    }
    
    #share > i{
    	margin-left: 10px;
    	font-size: 24px;
    	color: #EEE;
    }
    
    #share:hover{
    	left: 0px;
    }
    
    .show-new-dataCatalogView{
    	cursor: pointer;
    }
	.soc-media{
		float: right;
		margin-top: 18px;
	}
	.navbar-upper > .logo {
		margin: 10px;
		max-height: 83px;
		float: left;
	}
    
    /* Depending on the headerType, these classes apply */
    
    .navbar-inner > ul{
    	margin: 0px;
    }
    
	 #Navbar form {
      margin: 0px 0px 0px 0px;
      padding: 0px 0px 0px 0px;
    }
    
    /* Logged-in view and user controls in navbar */
    #Navbar i .user {
      opacity: .6;
    }
    
    #Navbar .dropdown-toggle > .icon-sort-down{
    	font-size: 15px;
    	width: 5px;
    }
    #Navbar .dropdown-menu > li > a:hover{
    	background-color: #1C6E84;
    	background-image: none;
    }
    
    #SignIn {
      float: right;
    }
    
    /* Search bar in nav bar */
    
    .navbar .input-append{
    	margin-bottom: 0px;
    }
    #search_txt{
		float: left;
    }  
    #search_btn{
		height: 16px;
		border-radius: 0px 4px 4px 0px;
		-webkit-border-radius: 0px 4px 4px 0px;
		-moz-border-radius: 0px 4px 4px 0px;
		padding: 5px 7px 7px 7px;
		float: left;
		margin-left: -5px;
    }
    #search_btn i{
    	font-size: .8em;
    	color: #999;
    }


    
    /** Backbone override for dropdowns so they dsplay on hover rather than click **/
    .dropdown-menu .sub-menu {
	    left: 100%;
	    position: absolute;
	    top: 0;
	    visibility: hidden;
	    margin-top: -1px;
	}
	
	.dropdown-menu li:hover .sub-menu {
	    visibility: visible;
	}

	.dropdown:hover .dropdown-menu{
	    display: block;
	}
	
	.dropdown:hover .dropdown-menu.hidden,
	.dropdown-menu.hidden{
		display: none;
	}
	
	.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
	    margin-top: 0;
	}
	
	.navbar .sub-menu:before {
	    border-bottom: 7px solid trans	parent;
	    border-left: none;
	    border-right: 7px solid rgba(0, 0, 0, 0.2);
	    border-top: 7px solid transparent;
	    left: -7px;
	    top: 10px;
	}
	.navbar .sub-menu:after {
	    border-top: 6px solid transparent;
	    border-left: none;
	    border-right: 6px solid #fff;
	    border-bottom: 6px solid transparent;
	    left: 10px;
	    top: 11px;
	    left: -6px;
	}
	
	.dropdown-header{
	margin-left: 20px;
	font-size: 12px;
	text-transform: uppercase;
}
    
/* OTHER NAVIGATION
-------------------------------------------------- */
.breadcrumb > .home,
.breadcrumb > li.home + li:before{ /*Hide the "Home" breadcrumb link and its divider */
	display: none;
}

/* METADATA VIEW CSS
-------------------------------------------------- */
	.metadata-index {
		border: 1px solid #1C6E84;
		padding: 20px;
		max-width: 940px;
		border-radius: 7px;
		-moz-border-radius: 7px;
		-webkit-border-radius: 7px;
		-o-border-radius: 7px;
	}
	#Metadata > form > cite.citation {
		/*color: #1C6E84;*/
	}
	label.control-label{
		font-weight: 400;
		font-size: 15px;
		line-height: 18px;
		cursor: default;
	}
	#Metadata > a[href="#data"]{
		display: block;
		font-size: 13px;
		padding: 10px;
	}
	
	#Metadata h4{
		font-weight: 600;
	}
	
	#Metadata .nav-header{
		text-transform: none;
	}
	
	#Metadata .nav-list > .active > a{
		font-weight: 700;
		background-color: #1C6E84;
		text-shadow: none;
	}
	
	#Metadata .nav > li > a:hover{
		text-shadow: none;
	}
	
	.search-results a.btn{
		font-weight: 700;
	}
	
    
    /** Prov charts **/
    .prov-chart,
    .prov-chart .node,
    .prov-chart .connecter{
    	border-color: #1C6E84;
    }
    .prov-chart .node:hover i,
    .prov-chart .node.active i{
    	color: #1C6E84;
    }
    .prov-chart .popover-title{
		background-color: #1C6E84;
		color: white;
		font-weight: light;
		padding: 6px;
		text-align: center;
    }
   /**----------------------------------------**/
      
    .entitydetails{
    	border: 1px solid #1C6E84;
    }
    
    .entitydetails h4{
    	color: #1C6E84;
    }
    
    .controls-well img{
		max-width: 90%;
		max-height: 900px;
		margin: 0 auto;
		display: block;
	}
	
    .georegion-map{
    	margin: 0px 180px;
    	display: block;
    }
	
	
	/** Metadata rendering via the Index **/
	#metadata-index-details {
		padding: 2%;
		width: 96%;
	}
	
	#metadata-index-details .controls-well .controls-well{
		margin-left: 0px;
	}
/* ... */

